src/objects/Teller_Transaction_Denomination__c.object
<CustomObject>
    <fields>
        <fullName>CCY_of_Denomination__c</fullName>
        <label>CCY of Denomination</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depository_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depository Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depository_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depository Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>From Depository</fullName>
                </value>
                <value>
                    <fullName>To Depository</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Denomination__c</fullName>
        <label>Number of Denomination</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teller_Transaction__c</fullName>
        <label>Teller Transaction</label>
        <referenceTo>Teller_Transaction__c</referenceTo>
        <relationshipLabel>Teller Transaction Denominations</relationshipLabel>
        <relationshipName>Teller_Transaction_Denominations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;GBP&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of GBP Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_EUR_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;EUR&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of EUR Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_QAR_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;QAR&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of QAR Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_USD_Denomination__c</fullName>
        <formula>IF( CCY_of_Denomination__c = &quot;USD&quot;, (Value_of_Denomination__c * Number_of_Denomination__c),0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of USD Denomination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Denomination__c</fullName>
        <label>Value of Denomination</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Teller Transaction Denomination</label>
    <nameField>
        <label>Teller Transaction Denomination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Transaction Denominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>